<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BuddyRooActivity!</string>
    <string name="app_name">BuddyRoo</string>
    <string name="disable">DISABLED</string>
    <string name="loading">Loading...</string>
    <string name="login">Log in</string>
    <string name="focused">FOCUSED</string>
    <string name="pressed">PRESSED</string>
    <string name="normal">NORMAL</string>
    <string name="topfriends">Top Friends</string>
    <string name="bio">Bio</string>
    <string name="Burcharest">Burcharest</string>
    <string name="VirgilPana">Virgil Pana</string>
    <string name="todo">TODO</string>
    <string name="_23">23</string>
    <string name="Profile">Profile</string>
    <string name="Activity">Activity</string>
    <string name="Photos">Photos</string>
    <string name="Elements">Elements</string>
    <string name="Day">Day</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="Agenda">Agenda</string>

    <style name="AudioFileInfoOverlayText">
        <item name="android:paddingLeft">4px</item>
        <item name="android:paddingBottom">4px</item>
        <item name="android:textColor">#ffffffff</item>
        <item name="android:textSize">12sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <style name="logo_shadow">
        <item name="android:paddingLeft">4px</item>
        <item name="android:paddingBottom">4px</item>
        <item name="android:textColor">#ffffffff</item>
        <item name="android:textSize">12sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">2</item>
        <item name="android:shadowDy">2</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="shadow_dropdow_white">
        <item name="android:shadowColor">#ffffff</item>
        <item name="android:shadowDx">2</item>
        <item name="android:shadowDy">2</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>