<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/nav_bar" >

        <TextView
            android:id="@+id/tvnameapp"
            style="@style/logo_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="28dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button01"
            style="@style/AudioFileInfoOverlayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="#00000000"
            android:onClick="onClick"
            android:paddingLeft="10dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btsetting"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Button01"
            android:background="@drawable/btsetting"
            android:onClick="onClick"
            android:textColor="@color/textthin" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <Button
            android:id="@+id/btprofile"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@layout/btselector"
            android:onClick="onClick"
            android:text="@string/Profile"
            android:textColor="@color/textthin" />

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/space_menu"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btactivity"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@layout/btselector"
            android:onClick="onClick"
            android:text="@string/Activity"
            android:textColor="@color/textthin" />

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/space_menu"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btphoto"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@layout/btselector"
            android:onClick="onClick"
            android:text="@string/Photos"
            android:textColor="@color/textthin" />

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/space_menu"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btelement"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@layout/btselector"
            android:onClick="onClick"
            android:text="@string/Elements"
            android:textColor="@color/textthin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" android:background="#251e1b">

        <ListView
            android:id="@+id/lvdata"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:cacheColorHint="#251e1b" android:layout_marginTop="1dp">
        </ListView>
    </LinearLayout>

</LinearLayout>